Updated 21 HW files.